--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,13 @@ install:
 before_script:
   - 'flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics'
 script:
+  # NOTE: any script that returns a non-zero value will cause a failure
   # Run CANADA_ENGLISH demo by settings YAML
   - 'funnel load -s demo/settings.yaml -log-level DEBUG'
   # Run an american search by CLI
   - 'funnel inline -kw Python Data Scientist PHD AI -ps WA -c Seattle -l USA_ENGLISH -log-level DEBUG -csv demo_job_search_results/demo_search.csv -cache demo_job_search_results/cache2 -blf demo_job_search_results/demo_block_list.json -dl demo_job_search_results/demo_duplicates_list.json -log-file demo_job_search_results/log.log'
   - 'pytest --cov=jobfunnel --cov-report=xml'
-  # - './tests/verify-artifacts.sh'  TODO: verify that JSON exist and are good
+  # TODO: modify some job statuses and run with --no-scrape...
   # - './tests/verify_time.sh'   TODO: some way of verifying execution time
 after_success:
   - 'bash <(curl -s https://codecov.io/bash)'
