--- a/demo/settings_USA.yaml
+++ b/demo/settings_USA.yaml
@@ -42,7 +42,8 @@ search:
   company_block_list:
     - "Infox Consulting"
 
-  # The desired level of work-remoteness (i.e. IN_PERSON, FULLY_REMOTE, ANY)
+  # The desired level of work-remoteness (i.e. IN_PERSON, FULLY_REMOTE, ANY,
+  # TEMPORARILY_REMOTE, PARTIALLY_REMOTE)
   remoteness: ANY
 
 # Logging level options are: critical, error, warning, info, debug, notset
