--- a/demo/settings.yaml
+++ b/demo/settings.yaml
@@ -28,9 +28,10 @@ search:
   # Region that we are searching for jobs within:
   province_or_state: "ON"  # NOTE: this is generally 2 characters long.
   city: "Waterloo"  # NOTE: this is the full city / town name. If set to "remote"
-  # and searching Indeed in the U.S. or Canada, or Monster, will search the entire country
-  # for remote listings instead of remote listings within designated area.
-  # province_or_state needs to have a value, but will be omitted upon setting "remote"
+  # and searching Indeed in the U.S. or Canada, or Monster U.S., UK. or Canada,
+  # will search the entire country for remote listings instead of remote listings
+  # within designated area. province_or_state needs to have a value,
+  #but will be omitted upon setting "remote"
   radius: 25  # km (NOTE: if we were in locale: USA_ENGLISH it's in miles)
 
   # These are the terms you would be typing into the website's search field:
