--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include jobfunnel/demo/settings.yaml
+include jobfunnel/demo/demo.png
 include jobfunnel/resources/user_agent_list.txt
 include readme.md
 include LICENSE
