--- a/demo/settings_USA.yaml
+++ b/demo/settings_USA.yaml
@@ -26,9 +26,28 @@ search:
     - MONSTER
 
   # Region that we are searching for jobs within:
-  province_or_state: "Texas"  # NOTE: this is generally 2 characters long.
-  city: "Richardson"  # NOTE: this is the full city / town name.
+  # NOTE: this is generally 2 characters long, but can be 'Null' (no quotes)
+  # to search by country, or can be some value while city is 'Null' to search
+  # within the province or state.
+  province_or_state: "Texas"
+  # NOTE: this is the full city / town name, but can be 'Null', with
+  # province_or_state set to 'Null' to search country-wide.
+  city: "Richardson"
   radius: 25  # km (NOTE: if we were in locale: USA_ENGLISH it's in miles)
+  remote_within_country: False
+
+  # To search entire country if one is willing to relocate anywhere:
+  # province_or_state: Null
+  # city: Null
+  # remote_within_country: False
+  # To search within entire province or state (radius will not be accounted):
+  # province_or_state: (ie. Scotland)
+  # city: Null
+  # remote_within_country: False
+  # To search entire country for remote roles:
+  # province_or_state: Null
+  # city: Null
+  # remote_within_country: True
 
   # These are the terms you would be typing into the website's search field:
   keywords:
