--- a/demo/settings_DE.yaml
+++ b/demo/settings_DE.yaml
@@ -24,28 +24,29 @@ search:
     - INDEED
 
   # Region that we are searching for jobs within:
-  province_or_state: "108"  # NOTE: this is generally 2 characters long.
+  province_or_state: ""  # Not used for the german scraper.
   city: "Berlin"  # NOTE: this is the full city / town name.
   radius: 0  # km (NOTE: if we were in locale: USA_ENGLISH it's in miles)
 
   # These are the terms you would be typing into the website's search field:
   keywords:
-    - community-manager
+    - Python
+    - Senior
+    - AI
 
   # Don't return any listings older than this:
   max_listing_days: 10
 
   # Blocked company names that will never appear in any results:
   company_block_list:
-    - "DFKI"
+    - "EvilCorp"
 
   # The desired level of work-remoteness (i.e. IN_PERSON, FULLY_REMOTE, ANY,
   # TEMPORARILY_REMOTE, PARTIALLY_REMOTE)
   remoteness: ANY
 
 # Logging level options are: critical, error, warning, info, debug, notset
-#log_level: INFO
-log_level: DEBUG
+log_level: INFO
 
 # Delaying algorithm configuration
 delay:
