upgraded requirements and setup for python 3.9

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-beautifulsoup4>=4.6.3
-lxml>=4.2.4
-requests>=2.19.1
-python-dateutil>=2.8.0
-PyYAML>=5.1
-scikit-learn>=0.21.2
-nltk>=3.4.1
-scipy>=1.4.1
-pytest>=5.3.1
-pytest-mock>=3.1.1
-selenium>=3.141.0
-webdriver-manager>=2.4.0
-Cerberus>=1.3.2
-tqdm>=4.47.0
+beautifulsoup4~=4.9.3
+lxml~=4.6.3
+requests~=2.26.0
+python-dateutil~=2.8.2
+PyYAML~=5.4.1
+scikit-learn~=0.24.2
+nltk~=3.6.2
+scipy~=1.7.1
+pytest~=6.2.5
+pytest-mock~=3.6.1
+selenium~=3.141.0
+webdriver-manager~=3.4.2
+Cerberus~=1.3.4
+tqdm~=4.62.2
