--- a/demo/settings_USA.yaml
+++ b/demo/settings_USA.yaml
@@ -22,18 +22,17 @@ search:
   # FIXME: we need to add back GLASSDOOR when that's working again.
   providers:
     - INDEED
-    - MONSTER
 
   # Region that we are searching for jobs within:
-  province_or_state: "Texas" # NOTE: this is generally 2 characters long.
-  city: "Richardson" # NOTE: this is the full city / town name.
+  province_or_state: "CA" # NOTE: this is generally 2 characters long.
+  city: "San Fransisco" # NOTE: this is the full city / town name.
   radius: 25 # km (NOTE: if we were in locale: USA_ENGLISH it's in miles)
 
   # These are the terms you would be typing into the website's search field:
   keywords:
-    - Python
-    - Senior
-    - AI
+    - Data Science
+    - Machine Learning
+    - Software Engineer
 
   # Don't return any listings older than this:
   max_listing_days: 35
@@ -47,7 +46,7 @@ search:
   remoteness: ANY
 
 # Logging level options are: critical, error, warning, info, debug, notset
-log_level: INFO
+log_level: DEBUG
 
 # Delaying algorithm configuration
 delay:
